exports[`mcfunction argument parser > minecraft:objective > Parse \"012\" 1`] = `
{
  "node": {
    "type": "symbol",
    "range": {
      "start": 0,
      "end": 3
    },
    "value": "012"
  },
  "errors": []
}
`;

exports[`mcfunction argument parser > minecraft:objective > Parse \"foo\" 1`] = `
{
  "node": {
    "type": "symbol",
    "range": {
      "start": 0,
      "end": 3
    },
    "value": "foo"
  },
  "errors": []
}
`;
